--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/picons-social/57/09-google-3-512.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../../Desktop/googlepage/style.css">
     <title>google</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     <img class="image1" src="https://play-lh.googleusercontent.com/1-hPxafOxdYpYZEOKzNIkSP43HXCNftVJVttoo4ucl7rsMASXW3Xr6GlXURCubE1tA=w3840-h2160-rw" alt="google image">
      <br>
     <input class="input1" type="search" placeholder="search">
-    <a class="ancar1" href="../../Desktop/googlepage/2ndpage.html"><button> search</button></a>
+    <a class="ancar1" href="/2ndpage.html"><button> search</button></a>
 
     <br><br>
     <button>i am feeling lucky</button>
